--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
             </li>
 
             <li class="botones">
-                <a href="pages/cortinas.html"><button class="btn btn-primary" type="submit">Cortinas</button></a>
+                <a href="cortinas.html"><button class="btn btn-primary" type="submit">Cortinas</button></a>
                 
             </li>
 
             <li class="botones">
-                <a href="pages/mantas.html"><button  class="btn btn-primary" type="submit">Mantas</button></a>
+                <a href="mantas.html"><button  class="btn btn-primary" type="submit">Mantas</button></a>
             </li>
 
             <li class="botones">
-                <a href="pages/almohadones.html"><button class="btn btn-primary" type="submit">Almohadones</button></a>
+                <a href="almohadones.html"><button class="btn btn-primary" type="submit">Almohadones</button></a>
             </li>
 
             <li class="botones">
-                <a href="pages/contacto.html"><button class="btn btn-primary" type="submit">Contacto</button></a>
+                <a href="contacto.html"><button class="btn btn-primary" type="submit">Contacto</button></a>
             </li>
            
         </nav>
