--- a/almohadones.html
+++ b/almohadones.html
@@ -11,7 +11,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         
     <!--link css-->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- titulo de mi página-->
     <title>Almohadones</title>
@@ -53,23 +53,23 @@
         <nav class="nav-botones" id="header-row-2">
 
             <li class="botones">
-                <a class="h" href="../index.html"><button class="btn btn-primary" type="submit">Home</button></a>
+                <a class="h" href="index.html"><button class="btn btn-primary" type="submit">Home</button></a>
             </li>
 
             <li class="botones">
-                <a href="../pages/cortinas.html"><button class="btn btn-primary" type="submit">Cortinas</button></a>
+                <a href="cortinas.html"><button class="btn btn-primary" type="submit">Cortinas</button></a>
             </li>
 
             <li class="botones">
-                <a href="../pages/mantas.html"><button  class="btn btn-primary" type="submit">Mantas</button></a>
+                <a href="mantas.html"><button  class="btn btn-primary" type="submit">Mantas</button></a>
             </li>
 
             <li class="botones">
-                <a href="../pages/almohadones.html"><button class="btn btn-primary" type="submit">Almohadones</button></a>
+                <a href="almohadones.html"><button class="btn btn-primary" type="submit">Almohadones</button></a>
             </li>
 
             <li class="botones">
-                <a href="../pages/contacto.html"><button class="btn btn-primary" type="submit">Contacto</button></a>
+                <a href="contacto.html"><button class="btn btn-primary" type="submit">Contacto</button></a>
             </li>
 
         </nav>
@@ -80,7 +80,7 @@
         <div class="prod-contenido">
             <div class="fila-prod ">
                 <img class="fila-prod-img" src="https://dummyimage.com/1000x1000/000/fff" alt="">
-                <div class="fila-prod-txt-der helper">
+                <div id="div1" class="fila-prod-txt-der helper">
                     tela importada de la india, largo 60ctm x 60ctm
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="fila-prod-txt-izq">
                     tela importada de la india, largo 60ctm x 60ctm
                 </div>
-                <img class="fila-prod-img " src="https://dummyimage.com/1000x1000/000/fff" alt="">
+                <img id="img2" class="fila-prod-img " src="https://dummyimage.com/1000x1000/000/fff" alt="">
             </div>
 
             <div class="fila-prod">
